Fix aspect ratio scaling on images, show 2 per row on mobile

--- a/css/editor.css
+++ b/css/editor.css
@@ -4,35 +4,46 @@
     justify-content: space-between;
 }
 
-.wp-block-alecg-swipe-gallery .sortable-gallery.sortable-gallery-last-row-2::after {
-    content: "";
-    flex: auto;
-    flex: 0 0 49%;
-}
-
-.wp-block-alecg-swipe-gallery .sortable-gallery.sortable-gallery-last-row-3::after {
-    content: "";
-    flex: auto;
-    flex: 0 0 23.5%;
-}
-
 .wp-block-alecg-swipe-gallery .sortable-gallery-item {
     cursor: grab;
-    flex: 0 0 23.5%;
+    flex: 0 0 49%;
     margin: 0 0 2% 0;
     position: relative;
 }
 
 .wp-block-alecg-swipe-gallery .swipe-gallery-item {
+    aspect-ratio: 16 / 9;
+    box-shadow: 0 0 6px rgba(0, 0, 0, 0.2);
     margin: 0;
 }
 
 .wp-block-alecg-swipe-gallery .swipe-gallery-item img {
-    width: 100%;
-    height: 100px;
-    object-fit: cover;
     display: block;
-    box-shadow: 0 0 6px rgba(0, 0, 0, 0.2);
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+@media only screen and (min-width: 601px) {
+    .wp-block-alecg-swipe-gallery .swipe-gallery-item {
+        aspect-ratio: 3 / 2;
+    }
+
+    .wp-block-alecg-swipe-gallery .sortable-gallery-item {
+        flex: 0 0 23.5%;
+    }
+
+    .wp-block-alecg-swipe-gallery .sortable-gallery.sortable-gallery-last-row-2::after {
+        content: "";
+        flex: auto;
+        flex: 0 0 49%;
+    }
+
+    .wp-block-alecg-swipe-gallery .sortable-gallery.sortable-gallery-last-row-3::after {
+        content: "";
+        flex: auto;
+        flex: 0 0 23.5%;
+    }
 }
 
 .wp-block-alecg-swipe-gallery .swipe-gallery-item.swipe-gallery-item-loading {
